@@ -2,7 +2,7 @@ You can use the fsck subcommand to check for problems in your data. What
 can be checked depends on the key-value [[backend|backends]] you've used
 for the data. For example, when you use the SHA1 backend, fsck will verify
 that the checksums of your files are good. Fsck also checks that the
-annex.numcopies setting is satisfied for all files.
+[[numcopies|copies]] setting is satisfied for all files.
 
 	# git annex fsck
 	fsck some_file (checksum...) ok
