@@ -10,12 +10,12 @@ you'll see something like this.
 	  Try making some of these repositories available:
 	   	58d84e8a-d9ae-11df-a1aa-ab9aa8c00826  -- portable USB drive
 	   	ca20064c-dbb5-11df-b2fe-002170d25c55  -- backup SATA drive
-	  (Use --force to override this check, or adjust annex.numcopies.)
+	  (Use --force to override this check, or adjust numcopies.)
 	failed
 	drop other.iso (unsafe)
 	  Could only verify the existence of 0 out of 1 necessary copies
           No other repository is known to contain the file.
-	  (Use --force to override this check, or adjust annex.numcopies.)
+	  (Use --force to override this check, or adjust numcopies.)
 	failed
 
 Here you might --force it to drop `important_file` if you [[trust]] your backup.
